<resources>
    <string name="app_name">LoginRegister</string>
    <string name="et_name_hint">nama disini</string>
    <string name="et_email_hint">email disini</string>
    <string name="et_password_hint">password disini</string>
    <string name="et_alamat_hint">alamat disini</string>
    <string name="et_jabatan_hint">jabatan</string>
    <string name="et_hakakses_hint">hak akses</string>
    <string name="title_activity_navigasi">Navigasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_jabatan">Jabatan</string>
    <string name="menu_anggota">Anggota</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="absen">Absensi</string>
    <string name="menu_rekapabsenanggota">Rekap Absen Anggota</string>
    <string name="menu_jamkerja">Jam Kerja</string>
</resources>