<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_jabatan"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_jabatan" />
        <item
            android:id="@+id/nav_anggota"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_anggota" />

        <item android:title="@string/absen">

            <menu>

                <item
                    android:id="@+id/nav_rekapabsenanggota"
                    android:icon="@drawable/ic_baseline_group_24"
                    android:title="@string/menu_rekapabsenanggota" />

                <item
                    android:id="@+id/nav_jamkerja"
                    android:icon="@drawable/ic_baseline_access_time_24"
                    android:title="@string/menu_jamkerja" />

            </menu>

        </item>

    </group>
</menu>